methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:29: error: not found: type Couleur
def fleur(c:Couleur){
            ^